# pes_match

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.html  CONTRIBUTING.html  LICENSE  Makefile  README.md  accessibilty.html  functions.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.html  src.html  src.pes_match.html  src.pes_match.pipeline.1_Stage_1.html  src.pes_match.pipeline.2_Stage_2.html  src.pes_match.pipeline.Clerical_Search.html  src.pes_match.pipeline.html  src.pes_match.pipeline.processing.html  tests.html
.doctrees/: CODE_OF_CONDUCT.doctree  CONTRIBUTING.doctree  accessibilty.doctree  environment.pickle  functions.doctree  index.doctree  modules.doctree  setup.doctree  src.doctree  src.pes_match.doctree  src.pes_match.pipeline.1_Stage_1.doctree  src.pes_match.pipeline.2_Stage_2.doctree  src.pes_match.pipeline.Clerical_Search.doctree  src.pes_match.pipeline.doctree  src.pes_match.pipeline.processing.doctree  tests.doctree
.github/: pull_request_template.md
CROW/: Config_clusters.ini
Data/: Mock_Data_Census.csv  Mock_Data_Pes.csv  cen_cleaned_CT.csv  pes_cleaned_CT.csv
Quality_Assurance/: MK_Sampling.py  Match_Rate_by_EA.py  View_all_records_in_EA.py
_sources/: CONTRIBUTING.md.txt  index.rst.txt  modules.rst.txt  src.pes_match.pipeline.rst.txt  tests.rst.txt
docs/: CODE_OF_CONDUCT.md  conf.py  functions.rst  index.rst  modules.rst  src.pes_match.pipeline.2_Stage_2.rst  src.pes_match.pipeline.processing.rst  (+1 more)
(+105 files in other folders)
