[metadata]
name = pes_match
description = A set of functions for cleaning and matching census data with Post Enumeration Survey data
version = v0.1.0
author = Charlie Tomlin
platforms = win32
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    pes_match
install_requires =
    jellyfish==0.9.0
    networkx==3.0
    numpy==1.24.2
    pandas==1.5.3
    pytest==7.2.2
    detect-secrets==1.0.3
    pre-commit==3.2.2
    Sphinx
python_requires = >=3.8
package_dir =
    =./src
zip_safe = no
